--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,23 +2,25 @@
 name = "vl6180x"
 version = "0.1.4"
 description = "A rust driver for the VL6180X (Time-of-Flight I2C laser-ranging module)"
-authors = ["Luca Zulian <lucagiuggia@gmail.com>"]
+authors = ["Luca Zulian <lucagiuggia@gmail.com>", "ijager"]
 categories = ["embedded", "hardware-support", "no-std"]
-keywords = ["hal", "IO"]
+keywords = ["embedded-hal-driver", "proximity", "distance", "sensor", "ambient light"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/lucazulian/vl6180x"
 edition = "2018"
 exclude = [
-    ".travis.yml", 
+    ".travis.yml",
 ]
 
 [dependencies]
 embedded-hal = "0.2.3"
-generic-array = "0.13.2"
-nb = "0.1.2"
 
-[dependencies.cast]
-default-features = false
-version = "0.2.3"
-uninit = "0.1.0"
+[dev-dependencies]
+cortex-m = "0.6.2"
+cortex-m-rt = "0.6.12"
+panic-halt = "0.2.0"
+
+[dev-dependencies.stm32g0xx-hal]
+features = ["stm32g07x", "rt"]
+version = "0.0.7"
