--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/lucazulian/vl6180x"
 edition = "2018"
-exclude = [
-    ".travis.yml", 
-]
+exclude = []
 
 [dependencies]
 embedded-hal = "0.2.3"
