--- a/.github/workflows/vl6180x-ci.yml
+++ b/.github/workflows/vl6180x-ci.yml
@@ -4,14 +4,14 @@ name: vl6180x-ci
 on:
   push:
     branches:
-      - '**'
+      - "**"
     tags:
       - "*.*.*"
   schedule:
     - cron: 0 0 * * 0
 
 env:
-  RUSTFLAGS: '--deny warnings'
+  RUSTFLAGS: "--deny warnings"
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        rust: [stable, beta, nightly, 1.52.1, 1.49.0]
+        rust: [stable, beta, nightly, 1.70.0]
         TARGET:
           - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
@@ -47,9 +47,9 @@ jobs:
       - name: Checkout CI scripts
         uses: actions/checkout@v2
         with:
-          repository: 'eldruin/rust-driver-ci-scripts'
-          ref: 'master'
-          path: 'ci'
+          repository: "eldruin/rust-driver-ci-scripts"
+          ref: "master"
+          path: "ci"
 
       - run: ./ci/patch-no-std.sh
         if: ${{ ! contains(matrix.TARGET, 'x86_64') }}
